--- a/apps/angular/src/index.html
+++ b/apps/angular/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <elegante-root></elegante-root>
+    <elegante-app></elegante-app>
   </body>
 </html>
