--- a/apps/app/src/index.html
+++ b/apps/app/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en" class="neutral dark">
   <head>
     <meta charset="utf-8" />
-    <title>Borda Angular</title>
+    <title>Insta App</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="manifest" href="/manifest.json">
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
