disable zoom on mobile

--- a/apps/app/src/index.html
+++ b/apps/app/src/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <title>Insta App</title>
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <borda-app></borda-app>
+    <insta-app></insta-app>
   </body>
 </html>
